# pydantic-ai-skills

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
exampleCode/: instructions.md  logfireExample.py  openrouterexample.py  pydanticAIcodeExamples.py
exampleCode/PydanticEvalDoc/: PydanticEvals.md
skills/pydantic-ai-agents/references/: 01_dependencies.py  02_prompts.py  03_tools.py  04_validators.py  05_main.py  06_openrouter.py  07_logfire.py  08_streaming.py  09_result_validators.py  10_model_settings.py  11_multi_agent.py  12_conversation_history.py
skills/pydantic-evals/references/: core-concepts.md  evaluator-types.md  integration.md
tests/: __init__.py  conftest.py
tests/example_code/: __init__.py  conftest.py  test_pydantic_ai_examples.py
tests/integration/: __init__.py  conftest.py  test_01_dependencies.py  test_02_prompts.py  test_03_tools.py  test_04_validators.py  test_06_openrouter.py  test_07_logfire.py  test_08_streaming.py  test_09_result_validators.py  test_10_model_settings.py  test_11_multi_agent.py  test_12_conversation_history.py  test_real_api.py
tests/integration/pydantic_evals/: __init__.py  conftest.py  test_01_models.py  test_02_generate_dataset.py  test_03_custom_evaluators.py  test_04_add_custom_evaluators.py  test_05_unit_testing.py  test_06_compare_models.py  test_compare_models.py  test_custom_evaluators.py  test_dataset_operations.py  test_evaluation_workflow.py  test_models.py
tests/pydantic_ai_agents/: __init__.py  conftest.py  test_01_dependencies.py  test_04_validators.py  test_05_main_async.py
tests/pydantic_evals/: __init__.py  conftest.py  test_models.py
